--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -6,7 +6,6 @@ on:
       - "*.*-*.*.*"
 
 env:
-  REGISTRY: hub.docker.com
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -30,15 +29,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Echo test
         run: echo ${{ steps.tagName.outputs.tag }}
-    #   - name: Build and push
-    #     uses: docker/build-push-action@v4
-    #     with:
-    #       context: .
-    #       push: true
-    #       tags: ${{ steps.tagName.outputs.tag }}
-    #       labels: ${{ steps.meta.outputs.labels }}
-    #       secrets: |
-    #         "OMEGA_API_ENV=${{ secrets.OMEGA_API_ENV }}"
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ steps.tagName.outputs.tag }}
+            ${{ env.IMAGE_NAME }}:latest
